--- a/src/app/goal/goal-detail/goal-detail.component.html
+++ b/src/app/goal/goal-detail/goal-detail.component.html
@@ -1,5 +1,5 @@
 <p>
   {{goal.description}}
 </p>
-<button (click)= 'goalComplete(true)'>Complete</button>
 <p>This goal will be complete in {{goal.completeDate|dateCount}} days</p>
+<button (click)= 'goalDelete(true)'class="btn btn-outline-danger">Delete Goal</button>
